styles.css
/* ... */
.sponsor {
  transition: all 1.5s cubic-bezier(0.455, 0.03, 0.515, 0.955);
  opacity: 1;
  padding-top: 30px;
  width: 30%;
  height: auto;
  margin: 16px;
}

@media screen and (max-width:1206px) {
  .tbt header {
    font-size: 30px;
  }
  .tbtext {
    margin-top: 35px;
  }
}

@media screen and (max-width:525px) {
  .tbt header {
    font-size: 20px;
  }
}

.pageactive {
  text-decoration: underline;
  font-weight: 900;
}


.tabs a.lines {
  display: none;
  color: black;
  padding: 0;
  align-items: center;
  padding-top: 16px;
}

@media screen and (max-width:965px) {

  .tabs a.lines {
    display: block;
  }

  .tabs a.dark {
    display: none;
  }
  .tabs a.sp {
    display: none;
  }
}

.topbar {
    height: auto;
    width: 100%;
    z-index: 9900;
    background-color: white;
    position: sticky;
    top: 0;
}

.topbar img {
  min-width: 20px;
  max-width: 145px;
  height: min-content;
  align-self: center;
  z-index: 0;
}
.clip {
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
  overflow: hidden;
  z-index: 9901;
}
.over {
  position: inherit;
  z-index: 9902;
  background-color: #00000000;
}

.gradient {
    height: 10px;
    background-image: linear-gradient(to right,red,darkblue);
    width: 100%;
}

/* .tabs a.lines {
  display: none;
  color: black;
} */
.tabs {
    height: 50px;
    background-color: #ceff00;
    width: 100%;
    display: flex;
    justify-content: center;
}
.tabs a {
  padding: 14px 16px;
    text-decoration: none;
    display:block;
    cursor: pointer;
}

.tbt {
    height: 160px;
    width: 100%;
    transition: .4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
    display: flex;
    justify-content: space-evenly;
    padding-left: 20%;
    padding-right: 20%;
}

.title {
    width: 65%;
    height: 100%;
}

li {
    width: 150px;
    height: 24px;
}

* {
    box-sizing: border-box;
  }
  
  /* Position the image container (needed to position the left and right arrows) */
  .container {
    align-items: center;
    position: relative;
    margin-top: 25px;
    width: 60vw ;
    height:60vh;
    margin-left: 20%;
    margin-bottom: 200px;
  }

  @media screen and (max-width: 1650px) {
    .container {
      height: 30vh;
    }
  }

  @media screen and (max-width:800px) {
    .container {
      height: 17vh;
    }
  }
  
  /* Hide the images by default */
  .mySlides {
    display: none;
    height: 100%;
  }
  .mySlides img {
    height: 100%;
    width: 100%;
    /* margin-top: 50%; */
    object-fit:cover;
    margin-left: 0;
  }
  
  /* Add a pointer when hovering over the thumbnail images */
  .cursor {
    cursor: pointer;
  }
  
  /* Next & previous buttons */
  .prev,
  .next {
    cursor: pointer;
    position: absolute;
    top: 40%;
    width: auto;
    padding: 16px;
    margin-top: -50px;
    color: white;
    font-weight: bold;
    font-size: 20px;
    border-radius: 0 3px 3px 0;
    user-select: none;
    -webkit-user-select: none;
  }
  
  /* Position the "next button" to the right */
  .next {
    right: 0;
    border-radius: 3px 0 0 3px;
  }
  .prev {
    right: 95%;
  }
  
  /* On hover, add a black background color with a little bit see-through */
  .prev:hover,
  .next:hover {
    background-color: rgba(0, 0, 0, 0.8);
  }
  
  /* Number text (1/3 etc) */
  .numbertext {
    color: #f2f2f2;
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
  }
  
  /* Container for image text */
  .caption-container {
    text-align: center;
    background-color: #222;
    padding: 2px 16px;
    color: white;
  }
  
  .row:after {
    content: "";
    display: table;
    clear: both;
  }

  .row {
    height: 90px;
    overflow: hidden;
  }
  
  /* Six columns side by side */
  .column {
    float: left;
    width: 16.66%;
    overflow: hidden;
  }
  
  /* Add a transparency effect for thumnbail images */
  .demo {
    opacity: 0.6;
  }
  
  .active,
  .demo:hover {
    opacity: 1;
  }
  
  .calender {
    border: 0;
    width: 75%;
    height: 70vh;
    margin: 36px 0 36px 0;
  }

.horizontalsss-theme {
  padding: 16px; width: 40%; height: auto;
}
.verticalsss {
  width: 75%;  padding: 42px; height: auto;
}
/* ... */

